修改表格样式

--- a/_posts/post/2016-11-04-lock.md
+++ b/_posts/post/2016-11-04-lock.md
@@ -81,7 +81,7 @@ Rows matched: 1  Changed: 1  Warnings: 0 |
 
 ### 间隙锁
 
-* __当使用范围查询时，InnoDB不仅会对存在的数据加锁，也会对不存在的空隙加锁，即间隙锁（max（id）＝10 ｜ where id > 9 | 对10加锁 ｜ 对 >10空隙加锁）__
+* **当使用范围查询时，InnoDB不仅会对存在的数据加锁，也会对不存在的空隙加锁，即间隙锁（max（id）＝10 ｜ where id > 9 | 对10加锁 ｜ 对 >10空隙加锁）**
 
 * __这种加锁的目的是为了防止幻读， 防治写操作过程中出现其它session提交了id > 10的数据。__
 
