--- a/_posts/life/2017-12-13-birthday.md
+++ b/_posts/life/2017-12-13-birthday.md
@@ -2,7 +2,7 @@
 layout: post
 title: "大厨出马，一个顶俩"
 date: 2017-12-13
-excerpt: "老婆大人亲自出马，好期待"
+excerpt: "老婆大人做的酒菜，好期待"
 tags: [大厨]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
