--- a/_posts/life/2017-12-13-birthday.md
+++ b/_posts/life/2017-12-13-birthday.md
@@ -11,7 +11,7 @@ video: true
 ---
 今天过生日，老婆大人一大早就出门买菜，都是我喜欢吃的菜。啤酒鸭，土豆烧肉，红烧鱼，想想就流口水。
 {: .notice}
-现在饭还没好，先发一个老婆大厨做饭的视频，静等待会饭菜上桌。
+现在饭菜还没做好，先发一个老婆大厨炒菜的视频，静等待会饭菜上桌。
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/mine/video/birthday.MOV" type='video/mp4'>
