--- a/_posts/life/2017-12-13-birthday.md
+++ b/_posts/life/2017-12-13-birthday.md
@@ -13,7 +13,7 @@ video: true
 {: .notice}
 现在饭菜还没做好，先发一个老婆大厨炒菜的视频，静等待会饭菜上桌。
 {: .notice}
-补上饭菜成品视频，简直不能再夸奖老婆大人的厨艺了。
+补上饭菜视频，简直不能再夸奖老婆大人的厨艺了。
 {: .notice}
 
 <video id="my-video" class="video-js vjs-16-9" controls preload="auto" width="722" height="264" data-setup="{}">
