--- a/_posts/life/2017-12-13-birthday.md
+++ b/_posts/life/2017-12-13-birthday.md
@@ -13,11 +13,17 @@ video: true
 {: .notice}
 现在饭菜还没做好，先发一个老婆大厨炒菜的视频，静等待会饭菜上桌。
 {: .notice}
-补上饭菜视频，简直不能再夸奖老婆大人的厨艺了。
-{: .notice}
 
 <video id="my-video" class="video-js vjs-16-9" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/mine/video/birthday.MOV" type='video/mp4'>
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a web browser that
+      <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+    </p>
+</video>
+补上饭菜视频，简直不能再夸奖老婆大人的厨艺了。
+{: .notice}
+<video id="my-video" class="video-js vjs-16-9" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/mine/video/birthday2.MOV" type='video/mp4'>
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a web browser that
