--- a/_posts/life/2017-12-13-birthday.md
+++ b/_posts/life/2017-12-13-birthday.md
@@ -20,7 +20,7 @@ video: true
       <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
-补上饭菜视频，简直不能再夸奖老婆大人的厨艺了。
+补上饭菜视频，简直不能再夸奖更多老婆大人的厨艺了。
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/mine/video/birthday2.MOV" type='video/mp4'>
