--- a/_posts/post/2017-12-18-star-map.md
+++ b/_posts/post/2017-12-18-star-map.md
@@ -8,6 +8,8 @@ tag:
 comments: true
 ---
 
+### 项目介绍
+
 * 在web集群中启用定时任务，往往需要对定时任务进行额外的处理。星图的思路是使web集群的每个节点都能作为任务执行节点去执行定时任务，但又不需担心任务多次执行的问题。
 * 星图是基于Dubbo设计思路的分布式任务分发执行服务，控制中心用于将定时任务分发到多个任务执行节点去执行，任务执行成功之后会将执行结果返回给控制中心，以扩展任务执行能力。
 * 需求：JAVA8，maven3
