--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -63,3 +63,11 @@ comments: false
     * 一款基于Mybatis的数据库分库分表插件
     * 支持自定义规则配置／自定义拦截配置
     * 路由规则支持自定义groovy表达式
+    
+### 2017.11.15 - 2017.12 / star-map - 个人项目
+* __项目地址：[https://github.com/justice-code/star-map](https://github.com/justice-code/star-map)__
+    * 参考dubbo实现的分布式任务分发系统
+    * 使用zookeeper作为注册中心
+    * 使用netty4实现通信协议
+    * 利用securityManager实现脚本沙箱环境
+    * [更多介绍请点击查看](https://justice-love.com/star-map/)
