--- a/_posts/post/2017-12-28-vim.md
+++ b/_posts/post/2017-12-28-vim.md
@@ -135,16 +135,16 @@ comments: true
     > 1.  `w` → 到下一个单词的开头。
 >     2.  `e` → 到下一个单词的结尾。
 > 
-> &gt; 如果你认为单词是由默认方式，那么就用小写的e和w。默认上来说，一个单词由字母，数字和下划线组成（陈皓注：程序变量）
+> > 如果你认为单词是由默认方式，那么就用小写的e和w。默认上来说，一个单词由字母，数字和下划线组成（陈皓注：程序变量）
 > 
->     &gt; 如果你认为单词是由blank字符分隔符，那么你需要使用大写的E和W。（陈皓注：程序语句）
+>     > 如果你认为单词是由blank字符分隔符，那么你需要使用大写的E和W。（陈皓注：程序语句）
 > 
->     ![Word moves example](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/word_moves.jpg)
+    ![Word moves example](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/word_moves.jpg)
 
 下面，让我来说说最强的光标移动：
 
-> *   `%`&nbsp;: 匹配括号移动，包括&nbsp;`(`, `{`, `[`. （陈皓注：你需要把光标先移到括号上）
-> *   `*`&nbsp;和&nbsp;`#`: &nbsp;匹配光标当前所在的单词，移动光标到下一个（或上一个）匹配单词（*是下一个，#是上一个）
+> *   `%` : 匹配括号移动，包括&nbsp;`(`, `{`, `[`. （陈皓注：你需要把光标先移到括号上）
+> *   `*`  `#`: &nbsp;匹配光标当前所在的单词，移动光标到下一个（或上一个）匹配单词（*是下一个，#是上一个）
 
 相信我，上面这三个命令对程序员来说是相当强大的。
 
