--- a/_posts/post/2017-12-28-vim.md
+++ b/_posts/post/2017-12-28-vim.md
@@ -9,7 +9,7 @@ comments: true
 ---
 > Better, Stronger, Faster.
 
-学习&nbsp;[vim](http://www.vim.org)&nbsp;并且其会成为你最后一个使用的文本编辑器。没有比这个更好的文本编辑器了，非常地难学，但是却不可思议地好用。
+学习 [vim](http://www.vim.org) 并且其会成为你最后一个使用的文本编辑器。没有比这个更好的文本编辑器了，非常地难学，但是却不可思议地好用。
 
 我建议下面这四个步骤：
 
@@ -31,38 +31,38 @@ comments: true
 
 #### 第一级 – 存活
 
-1.  安装&nbsp;[vim](http://www.vim.org)
+1.  安装 [vim](http://www.vim.org)
 2.  启动 vim
 3.  **什么也别干！**请先阅读
 
 当你安装好一个编辑器后，你一定会想在其中输入点什么东西，然后看看这个编辑器是什么样子。但vim不是这样的，请按照下面的命令操作：
 
-*   启 动Vim后，vim在&nbsp;_Normal_&nbsp;模式下。
-*   让我们进入&nbsp;_Insert_ 模式，请按下键 i 。(陈皓注：你会看到vim左下角有一个–insert–字样，表示，你可以以插入的方式输入了）
+*   启 动Vim后，vim在 _Normal_ 模式下。
+*   让我们进入 _Insert_ 模式，请按下键 i 。(陈皓注：你会看到vim左下角有一个–insert–字样，表示，你可以以插入的方式输入了）
 *   此时，你可以输入文本了，就像你用“记事本”一样。
-*   如果你想返回&nbsp;_Normal_&nbsp;模式，请按&nbsp;`ESC` 键。
+*   如果你想返回 _Normal_ 模式，请按 `ESC` 键。
 
-现在，你知道如何在&nbsp;_Insert_&nbsp;和&nbsp;_Normal_ 模式下切换了。下面是一些命令，可以让你在&nbsp;_Normal_ 模式下幸存下来：
+现在，你知道如何在 _Insert_ 和 _Normal_ 模式下切换了。下面是一些命令，可以让你在 _Normal_ 模式下幸存下来：
 
-> *   `i` → _Insert_ 模式，按&nbsp;`ESC`&nbsp;回到 _Normal_ 模式.
+> *   `i` → _Insert_ 模式，按 `ESC` 回到 _Normal_ 模式.
 > *   `x` → 删当前光标所在的一个字符。
-> *   `:wq` → 存盘 + 退出 (`:w` 存盘, `:q` 退出) &nbsp; （陈皓注：:w 后可以跟文件名）
+> *   `:wq` → 存盘 + 退出 (`:w` 存盘, `:q` 退出)   （陈皓注：:w 后可以跟文件名）
 > *   `dd` → 删除当前行，并把删除的行存到剪贴板里
 > *   `p` → 粘贴剪贴板
 > 
 > **推荐**:
 > 
 > *   `hjkl` (强例推荐使用其移动光标，但不必需) →你也可以使用光标键 (←↓↑→). 注: `j` 就像下箭头。
-> *   `:help &lt;command&gt;` → 显示相关命令的帮助。你也可以就输入&nbsp;`:help`&nbsp;而不跟命令。（陈皓注：退出帮助需要输入:q）
+> *   `:help <command>` → 显示相关命令的帮助。你也可以就输入 `:help` 而不跟命令。（陈皓注：退出帮助需要输入:q）
 
 你能在vim幸存下来只需要上述的那5个命令，你就可以编辑文本了，你一定要把这些命令练成一种下意识的状态。于是你就可以开始进阶到第二级了。
 
-当是，在你进入第二级时，需要再说一下&nbsp;_Normal _模式。在一般的编辑器下，当你需要copy一段文字的时候，你需要使用&nbsp;`Ctrl` 键，比如：`Ctrl-C`。也就是说，Ctrl键就好像功能键一样，当你按下了功能键Ctrl后，C就不在是C了，而且就是一个命令或是一个快键键了，**在VIM的Normal模式下，所有的键就是功能键了**。这个你需要知道。
+当是，在你进入第二级时，需要再说一下 _Normal _模式。在一般的编辑器下，当你需要copy一段文字的时候，你需要使用 `Ctrl` 键，比如：`Ctrl-C`。也就是说，Ctrl键就好像功能键一样，当你按下了功能键Ctrl后，C就不在是C了，而且就是一个命令或是一个快键键了，**在VIM的Normal模式下，所有的键就是功能键了**。这个你需要知道。
 
 标记:
 
-*   下面的文字中，如果是&nbsp;`Ctrl-λ`我会写成&nbsp;`&lt;C-λ&gt;`.
-*   以&nbsp;`:`&nbsp;开始的命令你需要输入&nbsp;`&lt;enter&gt;`回车，例如 — 如果我写成&nbsp;`:q`&nbsp;也就是说你要输入&nbsp;`:q&lt;enter&gt;`.
+*   下面的文字中，如果是 `Ctrl-λ`我会写成 `<C-λ>`.
+*   以 `:` 开始的命令你需要输入 `<enter>`回车，例如 — 如果我写成 `:q` 也就是说你要输入 `:q<enter>`.
 
 #### 第二级 – 感觉良好
 
@@ -81,30 +81,30 @@ comments: true
 >     *   `^` → 到本行第一个不是blank字符的位置（所谓blank字符就是空格，tab，换行，回车等）
 >     *   `$` → 到本行行尾
 >     *   `g_` → 到本行最后一个不是blank字符的位置。
->     *   `/pattern` → 搜索&nbsp;`pattern` 的字符串（陈皓注：如果搜索出多个匹配，可按n键到下一个）
+>     *   `/pattern` → 搜索 `pattern` 的字符串（陈皓注：如果搜索出多个匹配，可按n键到下一个）
 
 3.  **拷贝/粘贴** （陈皓注：p/P都可以，p是表示在当前位置之后，P表示在当前位置之前）
 
     > *   `P` → 粘贴
->     *   `yy` → 拷贝当前行当行于&nbsp;`ddP`
+>     *   `yy` → 拷贝当前行当行于 `ddP`
 
 4.  **Undo/Redo**
 
     > *   `u` → undo
->     *   `&lt;C-r&gt;` → redo
+>     *   `<C-r>` → redo
 
 5.  **打开/保存/退出/改变文件**(Buffer)
 
-    > *   `:e &lt;path/to/file&gt;` → 打开一个文件
+    > *   `:e <path/to/file>` → 打开一个文件
 >     *   `:w` → 存盘
->     *   `:saveas &lt;path/to/file&gt;` → 另存为&nbsp;`&lt;path/to/file&gt;`
->     *   `:x`，&nbsp;`ZZ` 或&nbsp;`:wq` → 保存并退出 (`:x`&nbsp;表示仅在需要时保存，ZZ不需要输入冒号并回车)
->     *   `:q!` → 退出不保存&nbsp;`:qa!`&nbsp;强行退出所有的正在编辑的文件，就算别的文件有更改。
->     *   `:bn`&nbsp;和&nbsp;`:bp`&nbsp;→ 你可以同时打开很多文件，使用这两个命令来切换下一个或上一个文件。（陈皓注：我喜欢使用:n到下一个文件）
+>     *   `:saveas <path/to/file>` → 另存为 `<path/to/file>`
+>     *   `:x`， `ZZ` 或 `:wq` → 保存并退出 (`:x` 表示仅在需要时保存，ZZ不需要输入冒号并回车)
+>     *   `:q!` → 退出不保存 `:qa!` 强行退出所有的正在编辑的文件，就算别的文件有更改。
+>     *   `:bn` 和 `:bp` → 你可以同时打开很多文件，使用这两个命令来切换下一个或上一个文件。（陈皓注：我喜欢使用:n到下一个文件）
 
 花点时间熟悉一下上面的命令，一旦你掌握他们了，你就几乎可以干其它编辑器都能干的事了。但是到现在为止，你还是觉得使用vim还是有点笨拙，不过没关系，你可以进阶到第三级了。
 
-#### 第三级&nbsp;– 更好，更强，更快
+#### 第三级 – 更好，更强，更快
 
 先恭喜你！你干的很不错。我们可以开始一些更为有趣的事了。在第三级，我们只谈那些和vi可以兼容的命令。
 
@@ -113,7 +113,7 @@ comments: true
 下面，让我们看一下vim是怎么重复自己的：
 
 1.  `.` → (小数点) 可以重复上一次的命令
-2.  N&lt;command&gt; → 重复某个命令N次
+2.  N<command> → 重复某个命令N次
 
 下面是一个示例，找开一个文件你可以试试下面的命令：
 
@@ -143,8 +143,8 @@ comments: true
 
 下面，让我来说说最强的光标移动：
 
-> *   `%` : 匹配括号移动，包括&nbsp;`(`, `{`, `[`. （陈皓注：你需要把光标先移到括号上）
-> *   `*`  `#`: &nbsp;匹配光标当前所在的单词，移动光标到下一个（或上一个）匹配单词（*是下一个，#是上一个）
+> *   `%` : 匹配括号移动，包括 `(`, `{`, `[`. （陈皓注：你需要把光标先移到括号上）
+> *   `*`  `#`:  匹配光标当前所在的单词，移动光标到下一个（或上一个）匹配单词（*是下一个，#是上一个）
 
 相信我，上面这三个命令对程序员来说是相当强大的。
 
@@ -152,17 +152,17 @@ comments: true
 
 你一定要记住光标的移动，因为很多命令都可以和这些移动光标的命令连动。很多命令都可以如下来干：
 
-`&lt;start position&gt;&lt;command&gt;&lt;end position&gt;`
+`<start position><command><end position>`
 
-例如&nbsp;`0y$` 命令意味着：
+例如 `0y$` 命令意味着：
 
 *   `0` → 先到行头
 *   `y` → 从这里开始拷贝
 *   `$` → 拷贝到本行最后一个字符
 
-你可可以输入&nbsp;`ye`，从当前位置拷贝到本单词的最后一个字符。
+你可可以输入 `ye`，从当前位置拷贝到本单词的最后一个字符。
 
-你也可以输入&nbsp;`y2/foo`&nbsp;来拷贝2个 “foo” 之间的字符串。
+你也可以输入 `y2/foo` 来拷贝2个 “foo” 之间的字符串。
 
 还有很多时间并不一定你就一定要按y才会拷贝，下面的命令也会被拷贝：
 
@@ -182,104 +182,104 @@ comments: true
 > *   `0` → 到行头
 > *   `^` → 到本行的第一个非blank字符
 > *   `$` → 到行尾
-> *   `g_`&nbsp;→ 到本行最后一个不是blank字符的位置。
+> *   `g_` → 到本行最后一个不是blank字符的位置。
 > *   `fa` → 到下一个为a的字符处，你也可以fs到下一个为s的字符。
 > *   `t,` → 到逗号前的第一个字符。逗号可以变成其它字符。
 > *   `3fa` → 在当前行查找第三个出现的a。
-> *   `F`&nbsp;和&nbsp;`T` → 和&nbsp;`f`&nbsp;和&nbsp;`t`&nbsp;一样，只不过是相反方向。
+> *   `F` 和 `T` → 和 `f` 和 `t` 一样，只不过是相反方向。
 > 
 >     ![Line moves](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/line_moves.jpg)
 
-还有一个很有用的命令是&nbsp;`dt"` → 删除所有的内容，直到遇到双引号——&nbsp;`"。`
+还有一个很有用的命令是 `dt"` → 删除所有的内容，直到遇到双引号—— `"。`
 
-##### 区域选择&nbsp;`&lt;action&gt;a&lt;object&gt;`&nbsp;或&nbsp;`&lt;action&gt;i&lt;object&gt;`
+##### 区域选择 `<action>a<object>` 或 `<action>i<object>`
 
 在visual 模式下，这些命令很强大，其命令格式为
 
-`&lt;action&gt;a&lt;object&gt;` 和 `&lt;action&gt;i&lt;object&gt;`
+`<action>a<object>` 和 `<action>i<object>`
 
-*   action可以是任何的命令，如&nbsp;`d` (删除), `y` (拷贝), `v` (可以视模式选择)。
-*   object 可能是：&nbsp;`w` 一个单词，&nbsp;`W` 一个以空格为分隔的单词，&nbsp;`s` 一个句字，&nbsp;`p` 一个段落。也可以是一个特别的字符：`"、`&nbsp;`'、`&nbsp;`)、`&nbsp;`}、`&nbsp;`]。`
+*   action可以是任何的命令，如 `d` (删除), `y` (拷贝), `v` (可以视模式选择)。
+*   object 可能是： `w` 一个单词， `W` 一个以空格为分隔的单词， `s` 一个句字， `p` 一个段落。也可以是一个特别的字符：`"、` `'、` `)、` `}、` `]。`
 
-假设你有一个字符串&nbsp;`(map (+) ("foo"))`.而光标键在第一个&nbsp;`o&nbsp;`的位置。
+假设你有一个字符串 `(map (+) ("foo"))`.而光标键在第一个 `o `的位置。
 
-> *   `vi"` → 会选择&nbsp;`foo`.
-> *   `va"` → 会选择&nbsp;`"foo"`.
-> *   `vi)` → 会选择&nbsp;`"foo"`.
+> *   `vi"` → 会选择 `foo`.
+> *   `va"` → 会选择 `"foo"`.
+> *   `vi)` → 会选择 `"foo"`.
 > *   `va)` → 会选择`("foo")`.
-> *   `v2i)` → 会选择&nbsp;`map (+) ("foo")`
-> *   `v2a)` → 会选择&nbsp;`(map (+) ("foo"))`
+> *   `v2i)` → 会选择 `map (+) ("foo")`
+> *   `v2a)` → 会选择 `(map (+) ("foo"))`
 
 ![Text objects selection](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/textobjects.png)
 
-##### 块操作: `&lt;C-v&gt;`
+##### 块操作: `<C-v>`
 
-块操作，典型的操作：&nbsp;`0 &lt;C-v&gt; &lt;C-d&gt; I-- [ESC]`
+块操作，典型的操作： `0 <C-v> <C-d> I-- [ESC]`
 
 *   `^` → 到行头
-*   `&lt;C-v&gt;` → 开始块操作
-*   `&lt;C-d&gt;` → 向下移动 (你也可以使用hjkl来移动光标，或是使用%，或是别的)
+*   `<C-v>` → 开始块操作
+*   `<C-d>` → 向下移动 (你也可以使用hjkl来移动光标，或是使用%，或是别的)
 *   `I-- [ESC]` → I是插入，插入“`--`”，按ESC键来为每一行生效。
 
 ![Rectangular blocks](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/rectangular-blocks.gif)
 
-在Windows下的vim，你需要使用&nbsp;`&lt;C-q&gt;` 而不是&nbsp;`&lt;C-v&gt;`&nbsp;，`&lt;C-v&gt;`&nbsp;是拷贝剪贴板。
+在Windows下的vim，你需要使用 `<C-q>` 而不是 `<C-v>` ，`<C-v>` 是拷贝剪贴板。
 
-##### 自动提示：&nbsp;`&lt;C-n&gt;`&nbsp;和&nbsp;`&lt;C-p&gt;`
+##### 自动提示： `<C-n>` 和 `<C-p>`
 
-在 Insert 模式下，你可以输入一个词的开头，然后按&nbsp;`&lt;C-p&gt;或是&lt;C-n&gt;，自动补齐功能就出现了……`
+在 Insert 模式下，你可以输入一个词的开头，然后按 `<C-p>或是<C-n>，自动补齐功能就出现了……`
 
 ![Completion](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/completion.gif)
 
-##### 宏录制：&nbsp;`qa` 操作序列&nbsp;`q`, `@a`, `@@`
+##### 宏录制： `qa` 操作序列 `q`, `@a`, `@@`
 
-*   `qa`&nbsp;把你的操作记录在寄存器&nbsp;`a。`
-*   于是&nbsp;`@a`&nbsp;会replay被录制的宏。
-*   `@@`&nbsp;是一个快捷键用来replay最新录制的宏。
+*   `qa` 把你的操作记录在寄存器 `a。`
+*   于是 `@a` 会replay被录制的宏。
+*   `@@` 是一个快捷键用来replay最新录制的宏。
 > **_示例_**
 > 
 > 在一个只有一行且这一行只有“1”的文本中，键入如下命令：
 > 
-> *   `qaYp&lt;C-a&gt;q`→
+> *   `qaYp<C-a>q`→
 > 
->     *   `qa`&nbsp;开始录制
+>     *   `qa` 开始录制
 >     *   `Yp` 复制行.
->     *   `&lt;C-a&gt;` 增加1.
+>     *   `<C-a>` 增加1.
 >     *   `q` 停止录制.
 > 
 > *   `@a` → 在1下面写下 2
 > *   `@@` → 在2 正面写下3
-> *   现在做&nbsp;`100@@` 会创建新的100行，并把数据增加到 103.
+> *   现在做 `100@@` 会创建新的100行，并把数据增加到 103.
 
 ![Macros](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/macros.gif)
 
-##### 可视化选择：&nbsp;`v`,`V`,`&lt;C-v&gt;`
+##### 可视化选择： `v`,`V`,`<C-v>`
 
-前面，我们看到了&nbsp;`&lt;C-v&gt;`的示例 （在Windows下应该是&lt;C-q&gt;），我们可以使用&nbsp;`v` 和 `V`。一但被选好了，你可以做下面的事：
+前面，我们看到了 `<C-v>`的示例 （在Windows下应该是<C-q>），我们可以使用 `v` 和 `V`。一但被选好了，你可以做下面的事：
 
 *   `J` → 把所有的行连接起来（变成一行）
-*   `&lt;` 或 `&gt;`&nbsp;→ 左右缩进
+*   `<` 或 `>` → 左右缩进
 *   `=` → 自动给缩进 （陈皓注：这个功能相当强大，我太喜欢了）
 
 ![Autoindent](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/autoindent.gif)
 
 在所有被选择的行后加上点东西：
 
-*   `&lt;C-v&gt;`
-*   选中相关的行 (可使用&nbsp;`j`&nbsp;或&nbsp;`&lt;C-d&gt;`&nbsp;或是&nbsp;`/pattern`&nbsp;或是&nbsp;`%`&nbsp;等……)
+*   `<C-v>`
+*   选中相关的行 (可使用 `j` 或 `<C-d>` 或是 `/pattern` 或是 `%` 等……)
 *   `$` 到行最后
-*   `A`, 输入字符串，按&nbsp;`ESC。`
+*   `A`, 输入字符串，按 `ESC。`
 
 ![Append to many lines](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/append-to-many-lines.gif)
 
-##### 分屏: `:split`&nbsp;和&nbsp;`vsplit`.
+##### 分屏: `:split` 和 `vsplit`.
 
-下面是主要的命令，你可以使用VIM的帮助&nbsp;`:help split`. 你可以参考本站以前的一篇文章[VIM分屏](https://coolshell.cn/articles/1679.html "Vim的分屏功能")。
+下面是主要的命令，你可以使用VIM的帮助 `:help split`. 你可以参考本站以前的一篇文章[VIM分屏](https://coolshell.cn/articles/1679.html "Vim的分屏功能")。
 
 > *   `:split` → 创建分屏 (`:vsplit`创建垂直分屏)
-> *   `&lt;C-w&gt;&lt;dir&gt;`&nbsp;: dir就是方向，可以是&nbsp;`hjkl` 或是 ←↓↑→ 中的一个，其用来切换分屏。
-> *   `&lt;C-w&gt;_` (或&nbsp;`&lt;C-w&gt;|`)&nbsp;: 最大化尺寸 (&lt;C-w&gt;|&nbsp;垂直分屏)
-> *   `&lt;C-w&gt;+` (或 `&lt;C-w&gt;-`)&nbsp;: 增加尺寸
+> *   `<C-w><dir>` : dir就是方向，可以是 `hjkl` 或是 ←↓↑→ 中的一个，其用来切换分屏。
+> *   `<C-w>_` (或 `<C-w>|`) : 最大化尺寸 (<C-w>| 垂直分屏)
+> *   `<C-w>+` (或 `<C-w>-`) : 增加尺寸
 
 ![Split](http://yannesposito.com/Scratch/img/blog/Learn-Vim-Progressively/split.gif)
 
@@ -292,8 +292,8 @@ comments: true
 *   有时候，学习VIM就像是在死背一些东西。
 *   幸运的是，vim有很多很不错的工具和优秀的文档。
 *   运行vimtutor直到你熟悉了那些基本命令。
-*   其在线帮助文档中你应该要仔细阅读的是&nbsp;`:help usr_02.txt`.
-*   你会学习到诸如&nbsp;&nbsp;`!，`&nbsp;目录，寄存器，插件等很多其它的功能。
+*   其在线帮助文档中你应该要仔细阅读的是 `:help usr_02.txt`.
+*   你会学习到诸如  `!，` 目录，寄存器，插件等很多其它的功能。
 
 学习vim就像学弹钢琴一样，一旦学会，受益无穷。
 
