--- a/_posts/yan/2017-12-30-yanyan16.md
+++ b/_posts/yan/2017-12-30-yanyan16.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "出门晒太阳的徐晓妍"
-date: 2017-12-19
-excerpt: "妍妍的日记-15"
+title: "妍妍游泳记2"
+date: 2017-12-30
+excerpt: "妍妍的日记-16"
 tags: [徐晓妍]
 feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
