--- a/_posts/yan/2017-12-30-yanyan16.md
+++ b/_posts/yan/2017-12-30-yanyan16.md
@@ -14,6 +14,7 @@ video: true
 今天下午妍爸和妍妈带着我们的小妍妍又去游泳了，我们的小妍妍这次游的好很多了，脚也会随着气泡的节奏滑动了，明显欢畅了很多，就口水是有点吐口水和拉绿色的粑粑。
 {: .notice}
 我们妍妍要快快长大，么么哒。
+{: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/swimming1.JPG"><img src="{{ site.staticUrl }}/yanyan/image/swimming1.JPG" /></a>
     <a href="{{ site.staticUrl }}/yanyan/image/swimming2.JPG"><img src="{{ site.staticUrl }}/yanyan/image/swimming2.JPG" /></a>
