--- a/_posts/post/2018-01-02-tcp.md
+++ b/_posts/post/2018-01-02-tcp.md
@@ -8,3 +8,16 @@ tag:
 comments: true
 ---
 ![tcp状态转换图]({{ site.staticUrl }}/image/jpg/tcp)
+
+## 三次握手
+
+### 协议相关
+
+1. 客户端向服务端发送```[SYN]```报文，申请链接。
+2. 服务端回复```[SYN,ACK]```报文，确认收到申请。
+3. 客户端回复```[ACK]```报文，确认收到服务端响应，链接建立成功。
+
+### 状态相关
+
+1. 客户端发送了```[SYN]```报文后状态为：SYN_SEND
+2. 服务端收到了链接请求后状态为：SYN_RCVD
