--- a/_posts/yan/2018-01-03-yanyan17.md
+++ b/_posts/yan/2018-01-03-yanyan17.md
@@ -8,3 +8,14 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
+我们的徐晓妍已经来到爸爸妈妈身边2个月零十天了，每天早起都会傻傻的看着爸爸妈妈笑，也会嗯嗯啊啊的想说话，也有大哭大闹不乖的时候。
+{: .notice}
+最近长沙天气冷了好多，天气预报看到过几天还可能会降雪，徐晓妍你要好好的，不要感冒，要好好的长大。
+{: .notice}
+爸爸妈妈爱你。
+{: .notice}
+<figure>
+    <a href="{{ site.staticUrl }}/yanyan/image/xizao1.JPG"><img src="{{ site.staticUrl }}/yanyan/image/xizao1.JPG" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/xizao2.JPG"><img src="{{ site.staticUrl }}/yanyan/image/xizao2.JPG" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/xizao3.JPG"><img src="{{ site.staticUrl }}/yanyan/image/xizao3.JPG" /></a>
+</figure>
