--- a/_posts/post/2018-01-05-find.md
+++ b/_posts/post/2018-01-05-find.md
@@ -8,7 +8,7 @@ tag:
 comments: true
 ---
 
-公司网络状况不好，网络掉线一次，大批的maven依赖下载失败，还好**find**指令可以方便的让我删除重来.
+公司网络状况不好，网络掉线一次，大批的maven依赖下载失败，还好**find**指令可以方便的让我删除重来。
 
 ``` shell
 find ~/.m2/repository -name "*.lastUpdated" -exec rm -f {} \;
