增加剪切板配置

--- a/_posts/yan/2017-12-03-yanyan12.md
+++ b/_posts/yan/2017-12-03-yanyan12.md
@@ -8,6 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 video: true
+clipboard: true
 ---
 
 **徐晓妍出生第39天，第一次带她去游泳，全家出动，前呼后拥，盛况空前。**
