--- a/_posts/yan/2017-12-03-yanyan12.md
+++ b/_posts/yan/2017-12-03-yanyan12.md
@@ -6,26 +6,33 @@ excerpt: "妍妍的日记-12"
 tags: [徐晓妍]
 feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
-comments: true
 video: true
 clipboard: true
 ---
 
 **徐晓妍出生第39天，第一次带她去游泳，全家出动，前呼后拥，盛况空前。**
 {: .notice}
-<figure>
-    <a href="{{ site.staticUrl }}/yanyan/image/swiming1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/swiming1.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/swiming2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/swiming2.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/swiming3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/swiming3.jpg" /></a>
-</figure>
-
-<video id="my-video" class="video-js vjs-16-9" controls preload="auto" width="722" height="264" data-setup="{}">
+<video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/swiming.mp4" type='video/mp4'>
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a web browser that
       <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
+<figure class="clipboard">
+    <a href="{{ site.staticUrl }}/yanyan/image/swiming1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/swiming1.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/swiming2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/swiming2.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/swiming3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/swiming3.jpg" /></a>
+</figure>
+
   
 **P.S. 照片是小妍她妈选的，她说喜欢大脸照。**
 {: .notice}
+<script>
+    new Clipboard('.clipboard', {
+        text: function(trigger) {
+            return "快来领取支付宝跨年红包！1月1日起还有机会额外获得专享红包哦！复制此消息，打开最新版支付宝就能领取！OXVoQ019GH";
+        }
+    });
+</script>
+
