--- a/_posts/yan/2017-12-03-yanyan12.md
+++ b/_posts/yan/2017-12-03-yanyan12.md
@@ -12,6 +12,8 @@ clipboard: true
 
 **徐晓妍出生第39天，第一次带她去游泳，全家出动，前呼后拥，盛况空前。**
 {: .notice}
+**徐晓妍10秒游泳视频**
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/swiming.mp4" type='video/mp4'>
     <p class="vjs-no-js">
