增加剪切板配置

--- a/_posts/yan/2017-12-03-yanyan12.md
+++ b/_posts/yan/2017-12-03-yanyan12.md
@@ -31,6 +31,7 @@ clipboard: true
   
 **P.S. 照片是小妍她妈选的，她说喜欢大脸照。**
 {: .notice}
+<script src="{{ site.url }}/assets/js/clipboard.min.js"></script>
 <script>
     new Clipboard('.clipboard', {
         text: function(trigger) {
