--- a/_posts/life/2018-01-09-vim-key.md
+++ b/_posts/life/2018-01-09-vim-key.md
@@ -6,7 +6,7 @@ tags: [vim-key]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 ---
-
+记录一下vim-key
 <figure class="clipboard">
     <a href="{{ site.staticUrl }}/image/png/vim-key.png"><img src="{{ site.staticUrl }}/image/png/vim-key.png" /></a>
 </figure>
