--- a/_posts/life/2018-01-09-vim-key.md
+++ b/_posts/life/2018-01-09-vim-key.md
@@ -2,11 +2,11 @@
 layout: post
 title: "记录一下vim-key"
 date: 2018-01-09
+excerpt: ""
 tags: [vim-key]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 ---
-记录一下vim-key
 <figure class="clipboard">
     <a href="{{ site.staticUrl }}/image/png/vim-key.png"><img src="{{ site.staticUrl }}/image/png/vim-key.png" /></a>
 </figure>
