--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -38,10 +38,14 @@ comments: false
 * 核身系统逐步取代安全部的二次验证，在淘宝网全网铺开。
 * 离开时初步参与核身系统上云方案。 
 
-### 2016.07- ～／湖南海翼集团／资深开发工程师
+### 2016.07- 2017.08／湖南海翼集团／资深开发工程师
+* 负责ERP系统的开发
 * 负责后端接口的维护（响应耗时，调用记录等）
 * 大数据表分表工作（简单哈希 + 虚拟节点）
-* 权限系统，基于RBAC1
+
+### 2017.08- ~ /微医集团
+* 负责分布式调用链路采集系统的开发
+* 负责自动化监控系统的开发
 
 ## 项目
 
