--- a/_posts/yan/2018-01-15-yanyan19.md
+++ b/_posts/yan/2018-01-15-yanyan19.md
@@ -9,3 +9,7 @@ yan: true
 comments: true
 ---
 刚睡醒的徐晓妍，睁着个大眼睛不知道看着哪里。笑脸红扑扑的好可爱，嘴巴好小，好想捏一下。
+{: .notice}
+<figure>
+    <a href="{{ site.staticUrl }}/yanyan/image/yan.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yan.jpg" /></a>
+</figure>
