--- a/_posts/yan/2018-01-17-yanyan20.md
+++ b/_posts/yan/2018-01-17-yanyan20.md
@@ -13,7 +13,7 @@ comments: true
 妍妍妈说妍妍在外婆家很乖很听话，不吵不闹，看来妍妍很喜欢去外婆家的。
 {: .notice}
 <figure>
-    <a href="{{ site.staticUrl }}/waipojiawaipojia/image/waipojia1.jpg"><img src="{{ site.staticUrl }}/waipojiawaipojia/image/waipojia1.jpg" /></a>
-    <a href="{{ site.staticUrl }}/waipojiawaipojia/image/waipojia2.jpg"><img src="{{ site.staticUrl }}/waipojiawaipojia/image/waipojia2.jpg" /></a>
-    <a href="{{ site.staticUrl }}/waipojiawaipojia/image/waipojia3.jpg"><img src="{{ site.staticUrl }}/waipojiawaipojia/image/waipojia3.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/waipojia1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/waipojia1.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/waipojia2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/waipojia2.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/waipojia3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/waipojia3.jpg" /></a>
 </figure>
