--- a/_posts/yan/2018-01-24-yanyan22.md
+++ b/_posts/yan/2018-01-24-yanyan22.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-分享一张徐晓妍联系抬头的照片。可爱的妍妍，爸爸爱你。
+分享一张徐晓妍练习抬头的照片。可爱的妍妍，爸爸爱你。
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg" /></a>
