--- a/_posts/yan/2018-01-29-yanyan23.md
+++ b/_posts/yan/2018-01-29-yanyan23.md
@@ -8,7 +8,9 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-
+这几天长沙下雪了，印象中湖南自从08年之后就没下过这么大的雪了。
+{: .notice}
+昨天早上，一家子带着傻妍出去拍了个合照，这是傻妍出生后的第一场雪。晓妍妈说，如果明年还下雪，傻妍就能和小朋友一起在外面撒欢了。
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg" /></a>
