--- a/_posts/yan/2018-01-29-yanyan23.md
+++ b/_posts/yan/2018-01-29-yanyan23.md
@@ -10,7 +10,9 @@ comments: true
 ---
 这几天长沙下雪了，印象中湖南自从08年之后就没下过这么大的雪了。
 {: .notice}
-昨天早上，一家子带着傻妍出去拍了个合照，这是傻妍出生后的第一场雪。晓妍妈说，如果明年还下雪，傻妍就能和小朋友一起在外面撒欢了。
+昨天早上，一家子带着傻妍出去拍了个合照，这是傻妍出生后的第一场雪，一下楼小脑袋就和装了马达一样扭来扭去，第一次看到白白的一片很兴奋的样子。
+{: .notice}
+晓妍妈说，如果明年还下雪，傻妍就能和小朋友一起在外面撒欢了。
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg" /></a>
