--- a/_posts/yan/2018-01-29-yanyan23.md
+++ b/_posts/yan/2018-01-29-yanyan23.md
@@ -16,8 +16,8 @@ comments: true
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg"><img style="transform:rotate(90deg);" src="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg"><img style="transform:rotate(90deg);" src="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg"><img style="transform:rotate(90deg);" src="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg"><img style="transform:rotate(90deg);" src="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg" /></a>
 </figure>
