--- a/_posts/yan/2018-01-29-yanyan23.md
+++ b/_posts/yan/2018-01-29-yanyan23.md
@@ -15,6 +15,7 @@ comments: true
 晓妍妈说，如果明年还下雪，傻妍就能和小朋友一起在外面撒欢了。
 {: .notice}
 <figure>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg" /></a>
     <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg" /></a>
     <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg" /></a>
     <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg" /></a>
