--- a/_posts/yan/2018-01-29-yanyan23.md
+++ b/_posts/yan/2018-01-29-yanyan23.md
@@ -16,8 +16,8 @@ comments: true
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg?imageView2/2/w/1200/h/600"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg?imageView2/2/w/1200/h/600" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg?imageView2/2/w/1200/h/600"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg?imageView2/2/w/1200/h/600" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg?imageView2/2/w/1200/h/600"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg?imageView2/2/w/1200/h/600" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg?imageView2/2/w/1200/h/600"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg?imageView2/2/w/1200/h/600" /></a>
 </figure>
