--- a/_posts/yan/2018-02-05-yanyan24.md
+++ b/_posts/yan/2018-02-05-yanyan24.md
@@ -11,8 +11,8 @@ comments: true
 妍妍100天了，贴几张妍妍和她妈的合照，拍照地在家里餐厅。
 {: .notice}
 <figure>
-    <a href="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yantaitou.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/101.JPG"><img src="{{ site.staticUrl }}/yanyan/image/101.JPG" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/102.JPG"><img src="{{ site.staticUrl }}/yanyan/image/102.JPG" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/103.JPG"><img src="{{ site.staticUrl }}/yanyan/image/103.JPG" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/104.JPG"><img src="{{ site.staticUrl }}/yanyan/image/104.JPG" /></a>
 </figure>
