--- a/_posts/yan/2018-02-05-yanyan24.md
+++ b/_posts/yan/2018-02-05-yanyan24.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-妍妍100天了，贴几张妍妍和她妈的合照，拍照地在家里餐厅。
+妍妍100天了，贴几张妍妍和她妈的合照，拍照地是家里餐厅。
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/101.JPG"><img src="{{ site.staticUrl }}/yanyan/image/101.JPG" /></a>
