--- a/_posts/yan/2018-02-05-yanyan24.md
+++ b/_posts/yan/2018-02-05-yanyan24.md
@@ -12,7 +12,7 @@ comments: true
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/101.JPG?imageMogr2/auto-orient" />
-    <a href="{{ site.staticUrl }}/yanyan/image/102.JPG"><img src="{{ site.staticUrl }}/yanyan/image/102.JPG" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/103.JPG"><img src="{{ site.staticUrl }}/yanyan/image/103.JPG" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/104.JPG"><img src="{{ site.staticUrl }}/yanyan/image/104.JPG" /></a>
+    <img src="{{ site.staticUrl }}/yanyan/image/102.JPG?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/103.JPG?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/104.JPG?imageMogr2/auto-orient" />
 </figure>
