--- a/_posts/yan/2018-01-29-yanyan23.md
+++ b/_posts/yan/2018-01-29-yanyan23.md
@@ -15,9 +15,9 @@ comments: true
 晓妍妈说，如果明年还下雪，傻妍就能和小朋友一起在外面撒欢了。
 {: .notice}
 <figure>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu1.jpg" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu2.jpg?imageView2/2/w/722/h/950" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu3.jpg?imageView2/2/w/722/h/950" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu4.jpg?imageView2/2/w/722/h/950" /></a>
-    <a href="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg"><img src="{{ site.staticUrl }}/yanyan/image/quanjiafu6.jpg?imageView2/2/w/722/h/950" /></a>
+    <img src="{{ site.staticUrl }}/yanyan/image/quanjianfu1.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/quanjianfu2.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/quanjianfu3.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/quanjianfu4.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/quanjianfu6.jpg?imageMogr2/auto-orient" />
 </figure>
