--- a/_posts/yan/2018-02-05-yanyan24.md
+++ b/_posts/yan/2018-02-05-yanyan24.md
@@ -8,27 +8,28 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-晓妍来到我们身边已经100天了，时间过的真快啊。
-她在我们不知情的情况下悄然长大，
-只有在给她洗澡换衣服时发现衣服竟然小了，才猛然惊觉
-原来我们度过的每一分每一秒，妍妍都在我们看不到的地方成长
-昨天游泳，称称我家小猪，已经13.5斤了
-每一天都是不一样的晓妍，每一天都是弥足珍贵的曼妙时光
+晓妍来到我们身边已经100天了，时间过的真快啊。<br/>
+她在我们不知情的情况下悄然长大，<br/>
+只有在给她洗澡换衣服时发现衣服竟然小了，才猛然惊觉<br/>
+原来我们度过的每一分每一秒，妍妍都在我们看不到的地方成长<br/>
 {: .notice}
-感谢妍妍来到我们身边，陪伴我们，给我们欢乐，带给我们感动
-感谢你选择了我们做你的爸爸妈妈，教会我们怎样去爱 
-爸爸妈妈那么幸运，遇到了我们的小天使
-让我们的人生变得完整
+昨天游泳，称称我家小猪，已经13.5斤了<br/>
+每一天都是不一样的晓妍，每一天都是弥足珍贵的曼妙时光<br/>
 {: .notice}
-亲爱的妍妍，爸爸妈妈希望你普普通通，安稳一生
-做你自己喜欢的事情，用自己喜欢的方式生活
+感谢妍妍来到我们身边，陪伴我们，给我们欢乐，带给我们感动<br/>
+感谢你选择了我们做你的爸爸妈妈，教会我们怎样去爱<br/>
+爸爸妈妈那么幸运，遇到了我们的小天使<br/>
+让我们的人生变得完整<br/>
 {: .notice}
-希望你平安健康成长，长成自己喜欢的模样
+亲爱的妍妍，爸爸妈妈希望你普普通通，安稳一生 
+做你自己喜欢的事情，用自己喜欢的方式生活 
 {: .notice}
-亲爱的妍妍，爸爸妈妈和你一起成长，学着怎样做一个合格的父母
-一起学习，一起领悟生活的点滴
+希望你平安健康成长，长成自己喜欢的模样 
 {: .notice}
-感谢你来到我们身边，爸爸妈妈爱你❤️
+亲爱的妍妍，爸爸妈妈和你一起成长，学着怎样做一个合格的父母 
+一起学习，一起领悟生活的点滴 
+{: .notice}
+感谢你来到我们身边，爸爸妈妈爱你❤️<br/>   
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/101.JPG?imageMogr2/auto-orient" />
