--- a/_posts/yan/2018-02-05-yanyan24.md
+++ b/_posts/yan/2018-02-05-yanyan24.md
@@ -8,8 +8,8 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-晓妍来到我们身边已经100天了，时间过的真快啊。<br/>
-她在我们不知情的情况下悄然长大，<br/>
+晓妍来到我们身边已经100天了，时间过的真快啊<br/>
+她在我们不知情的情况下悄然长大<br/>
 只有在给她洗澡换衣服时发现衣服竟然小了，才猛然惊觉<br/>
 原来我们度过的每一分每一秒，妍妍都在我们看不到的地方成长<br/>
 {: .notice}
