--- a/_posts/yan/2018-02-05-yanyan24.md
+++ b/_posts/yan/2018-02-05-yanyan24.md
@@ -21,8 +21,7 @@ comments: true
 爸爸妈妈那么幸运，遇到了我们的小天使<br/>
 让我们的人生变得完整<br/>
 {: .notice}
-亲爱的妍妍，爸爸妈妈希望你普普通通，安稳一生<br/> 
-做你自己喜欢的事情，用自己喜欢的方式生活<br/><br/>
+亲爱的妍妍，爸爸妈妈希望你普普通通，安稳一生，做你自己喜欢的事情，用自己喜欢的方式生活<br/>
 希望你平安健康成长，长成自己喜欢的模样<br/>
 {: .notice}
 亲爱的妍妍，爸爸妈妈和你一起成长，学着怎样做一个合格的父母<br/>
