--- a/_posts/post/2018-02-09-selector.md
+++ b/_posts/post/2018-02-09-selector.md
@@ -11,3 +11,9 @@ comments: true
 ---
 
 > 最近在项目中使用了zk来实现主节点的选举，下面主要介绍下`curator`中提供的leader selector模块
+
+## Apache Curator
+
+Apache Curator是Apache提供的zookeeper客户端，提供了诸如zk节点操作，分布式锁，通知，订阅，注册发现选举等操作。
+
+
