--- a/_posts/yan/2018-02-12-yanyan27.md
+++ b/_posts/yan/2018-02-12-yanyan27.md
@@ -12,7 +12,7 @@ comments: true
 {: .notice}
 徐晓妍你好好好睡觉知道吗，晚上还踢被子，被子都被你踢掉了，都着凉了你知道不。
 {: .notice}
-徐晓妍你快4个月大了，也越来越有力气了，就是老担心你的眼睛，老不好。
+徐晓妍你快4个月大了，也越来越有力气了，就是担心你的眼睛，一直不好。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/xiaofeiyan1.jpg?imageMogr2/auto-orient" />
