--- a/_posts/yan/2018-02-12-yanyan27.md
+++ b/_posts/yan/2018-02-12-yanyan27.md
@@ -8,11 +8,11 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-徐晓妍这几天很不乖，一到晚上就好兴奋不肯睡觉，她妈都无奈了，徐晓妍还一个劲的在那里傻笑。
+徐晓妍这几天很不乖，一到晚上就好兴奋不肯睡觉，她妈都无奈了，自己还一个劲的在那里傻笑。
 {: .notice}
-徐晓妍你好好好睡觉知道吗，晚上还踢被子，被子都被你踢掉了，都着凉了你知道不。
+徐晓妍你要好好好睡觉知道吗，晚上还踢被子，被子都被你踢掉了，都着凉了你知道不。
 {: .notice}
-徐晓妍你快4个月大了，也越来越有力气了，就是担心你的眼睛，一直不好。
+徐晓妍你快4个月大了，也越来越有力气了，头抬的越来越好了，就是担心你的眼睛，有点感染，一直不好。
 {: .notice}
 还有就是徐晓妍越来越可爱了❤️
 {: .notice}
