--- a/_posts/yan/2018-02-12-yanyan27.md
+++ b/_posts/yan/2018-02-12-yanyan27.md
@@ -12,7 +12,7 @@ comments: true
 {: .notice}
 徐晓妍你要好好好睡觉知道吗，晚上还踢被子，被子都被你踢掉了，都着凉了你知道不。
 {: .notice}
-徐晓妍你快4个月大了，也越来越有力气了，头抬的越来越好了，就是担心你的眼睛，有点感染，一直不好。
+徐晓妍你快4个月大了，也越来越有力气了，头抬的越来越好了，就是担心你的右眼，有点感染，眼屎很多，也一直不好。
 {: .notice}
 还有就是徐晓妍越来越可爱了❤️
 {: .notice}
