--- a/_posts/yan/2017-11-02-yanyan01.md
+++ b/_posts/yan/2017-11-02-yanyan01.md
@@ -9,15 +9,23 @@ yan: true
 comments: true
 ---
 
-**大家好，我叫徐晓妍，今天是我出生的第八天，我还不知道怎么和大家打招呼，我现在还只能躺在我妈妈的怀里，偶尔也会睁开眼睛偷偷的看一眼外面，虽然或许也看不怎么明白。**
+大家好，我叫徐晓妍，今天是我出生的第八天，我还不知道怎么和大家打招呼，我现在还只能躺在我妈妈的怀里，偶尔也会睁开眼睛偷偷的看一眼外面，虽然或许也看不怎么明白。
 {: .notice}
-**我也不不知道为什么，我特别容易饿，也特别想睡觉，或许过几天我会长大些，也能和大家多说些话。**
+我也不不知道为什么，我特别容易饿，也特别想睡觉，或许过几天我会长大些，也能和大家多说些话。
 {: .notice}
-**新的世界，么么哒^_^**
+新的世界，么么哒^_^
+{: .notice}
+第一次和爸爸拍照，还是很紧张的❤️
 {: .notice}
 <figure>
-	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG" /></a>
-	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1665.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1665.JPG" /></a>
-	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1666.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1666.JPG" /></a>
-	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1667.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1667.JPG" /></a>
+	<img src="{{ site.staticUrl }}/yanyan/image/chusheng1.JPG" />
+	<img src="{{ site.staticUrl }}/yanyan/image/chusheng2.JPG" />
+</figure>
+五天的妍妍，已经长开了点，很萌很可爱
+{: .notice}
+<figure>
+	<img src="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG" />
+	<img src="{{ site.staticUrl }}/yanyan/image/IMG_1665.JPG" />
+	<img src="{{ site.staticUrl }}/yanyan/image/IMG_1666.JPG" />
+	<img src="{{ site.staticUrl }}/yanyan/image/IMG_1667.JPG" />
 </figure>
