--- a/_posts/yan/2018-02-14-yanyan28.md
+++ b/_posts/yan/2018-02-14-yanyan28.md
@@ -10,4 +10,15 @@ comments: true
 ---
 今天情人节，早上起来第一件事先给老婆发个大红包，么么哒❤️
 {: .notice}
-昨天和老婆带妍妍去了省儿童医院看眼睛，去之前好担心
+昨天和老婆带妍妍去了省儿童医院看眼睛，去之前好担心一进医院就让你去做这种那种的化验，所以去之前很抗拒，不想带妍妍去。
+{: .notice}
+省儿童在侯家塘那里，早上大概8点出的门，到汽车北站转乘了地铁，这是第一次带妍妍坐地铁，在地铁上她的小脑袋不停的转来转去，都不知道哪有这么多好看的。
+{: .notice}
+到了医院，取号，排队，等待就医。医生还算年轻，因为妍妈是护士，她描述了症状之后，医生很干脆的让我们去做泪管冲洗。
+{: .notice}
+上麻药，我和妍妈两个人一人扶头一人扶住身子，护士拿着长长的针管从眼角插入泪管进行冲洗，看得我有些紧张。
+{: .notice}
+冲洗完医生交代了句年后再来冲洗一次，如果还是不通还得做个小手术，徐晓妍你要加油，妍妈也会每天给你按摩的，争取不要做手术，做手术可是很伤元气的。
+{: .notice}
+爸爸爱你，明天就是除夕了，祝大家新年快乐。
+{: .notice}
