--- a/_posts/life/2018-02-15-newyear.md
+++ b/_posts/life/2018-02-15-newyear.md
@@ -12,3 +12,8 @@ comments: false
 读书的文思如泉涌，写作解题都易如反掌，知识充满大脑；<br/>
 上班的步步高升，所有工作都信手拈来，奖金赚满怀；<br/>
 长辈们健康吉祥，所有不好都绕道走，家里和睦安详。<br/>
+<figure>
+    <img src="{{ site.staticUrl }}/yanyan/image/daxiang1.jpg" />
+	<img src="{{ site.staticUrl }}/yanyan/image/daxiang2.jpg" />
+	<img src="{{ site.staticUrl }}/image/jpg/nianfan.jpg" />
+</figure>
