--- a/_posts/life/2018-02-15-newyear.md
+++ b/_posts/life/2018-02-15-newyear.md
@@ -2,7 +2,7 @@
 layout: post
 title: "新春大吉，福泰安康"
 date: 2018-02-15
-excerpt: "恭祝所有人新年吉祥安康如意"
+excerpt: "恭祝所有人新年吉祥安康幸福如意"
 tags: [新年大吉]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
