--- a/_posts/life/2018-02-15-newyear.md
+++ b/_posts/life/2018-02-15-newyear.md
@@ -6,6 +6,7 @@ excerpt: "恭祝所有人新年吉祥安康幸福如意"
 tags: [新年大吉]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
+yan: true
 comments: false
 ---
 值此戊戌狗年新春佳节之际，祝大家吉祥如意，福寿安康：<br/>
