--- a/_posts/life/2018-02-15-newyear.md
+++ b/_posts/life/2018-02-15-newyear.md
@@ -7,7 +7,7 @@ tags: [新年大吉]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 yan: true
-comments: false
+comments: true
 ---
 值此戊戌狗年新春佳节之际，祝大家吉祥如意，福寿安康：<br/>
 读书的文思如泉涌，写作解题都易如反掌，知识充满大脑；<br/>
