--- a/_posts/yan/2018-02-14-yanyan28.md
+++ b/_posts/yan/2018-02-14-yanyan28.md
@@ -22,3 +22,6 @@ comments: true
 {: .notice}
 爸爸爱你，明天就是除夕了，祝大家新年快乐。
 {: .notice}
+<figure>
+    <img src="{{ site.staticUrl }}/yanyan/image/kanbing.jpg?imageMogr2/auto-orient" />
+</figure>
