--- a/_posts/yan/2018-02-20-yanyan29.md
+++ b/_posts/yan/2018-02-20-yanyan29.md
@@ -15,5 +15,8 @@ comments: true
 分享几张徐晓妍趴着的照片，有两张是徐晓妍趴在我身上的照片，看着徐晓妍不知道发生什么事情的表情，好可爱❤️。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/kanbing.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/pazhe1.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/pazhe2.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/pazhe3.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/pazhe4.jpg?imageMogr2/auto-orient" />
 </figure>
