--- a/_posts/yan/2018-02-20-yanyan29.md
+++ b/_posts/yan/2018-02-20-yanyan29.md
@@ -12,7 +12,7 @@ comments: true
 {: .notice}
 徐晓妍今天还收获了一个新外号，大脸妍，妍妈起的，因为抱着徐晓妍的时候，被子外面全是脸😳
 {: .notice}
-分享几张徐晓妍趴着的照片，有两张是徐晓妍趴在我身上的照片，看着徐晓妍不知道发生什么事情的表情，好可爱❤️。
+分享几张徐晓妍趴着的照片，有两张是徐晓妍趴在我身上的照片，看着徐晓妍不知道发生什么事情的表情，好可爱❤️
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/pazhe1.jpg?imageMogr2/auto-orient" />
