--- a/_posts/yan/2018-02-28-yanyan30.md
+++ b/_posts/yan/2018-02-28-yanyan30.md
@@ -10,5 +10,5 @@ comments: true
 ---
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/pazhe4.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundong.jpg?imageMogr2/auto-orient" />
 </figure>
