--- a/_posts/yan/2018-02-28-yanyan30.md
+++ b/_posts/yan/2018-02-28-yanyan30.md
@@ -8,7 +8,11 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
+这几天长沙天气不错，空气质量因为下雨也有所改善，记忆中湖南好久没有这么舒服的暖春了。
 {: .notice}
+上午傻妍的奶奶用新买的背带背着傻妍出门嗮太阳，在小区里带着傻妍锻炼着玩。等傻妍大点了我要经常带着她出去踢球跑步锻炼什么的，小孩子么，强身健体了才能建设好我们的祖国。
+{: .notice}
+话说回来，每次看到傻妍那大脸庞我都想捏，晚上回去帮傻妍做脸保健操好了。
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/yundong.jpg?imageMogr2/auto-orient" />
 </figure>
