--- a/_posts/post/2018-03-01-repeat.md
+++ b/_posts/post/2018-03-01-repeat.md
@@ -33,4 +33,4 @@ comments: true
 
 ## 对于重复请求的处理
 
-对于重复请求的处理比较简单，任意请求提交到服务端进行处理时，比对一次该请求ID是否已处理，用以防止重复的请求ID多次响应。
+对于重复请求的处理比较简单粗暴，任意请求提交到服务端进行处理时，比对一次该请求ID是否已处理，用以防止重复的请求ID多次响应。
