--- a/_posts/yan/2018-02-28-yanyan30.md
+++ b/_posts/yan/2018-02-28-yanyan30.md
@@ -15,5 +15,5 @@ comments: true
 话说回来，每次看到傻妍那大脸庞我都想捏，晚上回去帮傻妍做脸保健操好了。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/yundong.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundongzhao.jpg?imageMogr2/auto-orient" />
 </figure>
