--- a/_posts/post/2018-03-01-repeat.md
+++ b/_posts/post/2018-03-01-repeat.md
@@ -10,3 +10,12 @@ comments: true
 
 > 系统日常使用过程中，经常会遇到因为网络或者其他原因而产生的消息重发问题，对于某些系统，消息的排重格外重要。
 
+## 消息重复
+
+消息重复根本的问题是网络传输到服务器的数据包重复。而相对于一个完整请求来说，消息重复可以分为：请求重复和请求分段消息重复。
+
+### 请求重复
+
+请求已经被正确处理之后，仍然由于网络等其他原因，服务端接收到相同请求，这是第二次接收到的请求应该予以忽略。
+
+### 请求分段消息重复
