--- a/_posts/post/2018-03-01-repeat.md
+++ b/_posts/post/2018-03-01-repeat.md
@@ -19,3 +19,13 @@ comments: true
 请求已经被正确处理之后，仍然由于网络等其他原因，服务端接收到相同请求，这是第二次接收到的请求应该予以忽略。
 
 ### 请求分段消息重复
+
+一个完整的请求被分成多个数据包进行传输，每个分段消息都可能会重复，同样的，对于已接收的分段消息要予以忽略。
+
+## 对于分段消息重复的处理
+
+客户端在封装一个请求的分段消息的时候，除了在增加请求体数据之外，还可以增加metadata信息，包括
+* 请求ID
+* 分段消息数量
+* 分段消息序列
+服务端在收到请求分段消息后，阅读metadata信息，将消息复制到全局缓存中，准备接收剩余的分段消息。剩余的分段消息接收到后将于缓存中的进行序列号比对，重复的予以忽略，直至请求组装完成发送给服务器处理，处理成功后清除缓存请求。
