--- a/_posts/post/2018-03-01-repeat.md
+++ b/_posts/post/2018-03-01-repeat.md
@@ -29,3 +29,7 @@ comments: true
 * 分段消息数量
 * 分段消息序列
 服务端在收到请求分段消息后，阅读metadata信息，将消息复制到全局缓存中，准备接收剩余的分段消息。剩余的分段消息接收到后将于缓存中的进行序列号比对，重复的予以忽略，直至请求组装完成发送给服务器处理，处理成功后清除缓存请求。
+
+## 对于重复请求的处理
+
+对于重复请求的处理比较简单，任意请求提交到服务端进行处理时，比对一次该请求ID是否已处理，用以防止重复的请求ID多次响应。
