--- a/_posts/post/2018-03-01-repeat.md
+++ b/_posts/post/2018-03-01-repeat.md
@@ -14,11 +14,11 @@ comments: true
 
 消息重复根本的问题是网络传输到服务器的数据包重复。而相对于一个完整请求来说，消息重复可以分为：请求重复和请求分段消息重复。
 
-### 请求重复
+**请求重复**
 
 请求已经被正确处理之后，仍然由于网络等其他原因，服务端接收到相同请求，这是第二次接收到的请求应该予以忽略。
 
-### 请求分段消息重复
+**请求分段消息重复**
 
 一个完整的请求被分成多个数据包进行传输，每个分段消息都可能会重复，同样的，对于已接收的分段消息要予以忽略。
 
