--- a/_posts/post/2018-03-01-repeat.md
+++ b/_posts/post/2018-03-01-repeat.md
@@ -24,12 +24,12 @@ comments: true
 
 ## 对于分段消息重复的处理
 
-客户端在封装一个请求的分段消息的时候，除了在增加请求体数据之外，还可以增加metadata信息，包括
+客户端在封装一个请求的分段消息的时候，除了在增加请求体数据之外，还可以增加`metadata`信息，包括
 * 请求ID
 * 分段消息数量
 * 分段消息序列
 
-服务端在收到请求分段消息后，阅读metadata信息，将消息复制到全局缓存中，准备接收剩余的分段消息。剩余的分段消息接收到后将于缓存中的进行序列号比对，重复的予以忽略，直至请求组装完成发送给服务器处理，处理成功后清除缓存请求。
+服务端在收到请求分段消息后，阅读`metadata`信息，将消息复制到全局缓存中，准备接收剩余的分段消息。剩余的分段消息接收到后将与缓存中的进行序列号比对，重复的予以忽略，直至请求组装完成发送给服务器处理，处理成功后清除缓存请求。
 
 ## 对于重复请求的处理
 
