--- a/_posts/post/2018-03-01-repeat.md
+++ b/_posts/post/2018-03-01-repeat.md
@@ -16,11 +16,11 @@ comments: true
 
 **请求重复**
 
-请求已经被正确处理之后，仍然由于网络等其他原因，服务端接收到相同请求，这是第二次接收到的请求应该予以忽略。
+请求已经被服务器正确响应。由于网络等其他原因，服务端仍有可能接收到相同请求，这次请求应该予以忽略。
 
 **请求分段消息重复**
 
-一个完整的请求被分成多个数据包进行传输，每个分段消息都可能会重复，同样的，对于已接收的分段消息要予以忽略。
+首次接收到请求，服务器还未响应时。一个完整的请求被分成多个数据包进行传输，每个分段消息都可能会重复，同样的，对于已接收的分段消息要予以忽略。
 
 ## 对于分段消息重复的处理
 
