--- a/_posts/post/2018-03-01-repeat.md
+++ b/_posts/post/2018-03-01-repeat.md
@@ -20,7 +20,7 @@ comments: true
 
 **请求分段消息重复**
 
-首次接收到请求，服务器还未响应时。一个完整的请求被分成多个数据包进行传输，每个分段消息都可能会重复，同样的，对于已接收的分段消息要予以忽略。
+首次接收到请求，服务器还未响应。一个完整的请求被分成多个数据包进行传输，每个分段消息都可能会重复，同样的，对于已接收的分段消息要予以忽略。
 
 ## 对于分段消息重复的处理
 
