--- a/_posts/yan/2018-03-03-yanyan31.md
+++ b/_posts/yan/2018-03-03-yanyan31.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-上周五是元宵节，爸爸请假提前回家过节，爸爸上班辛苦了，所以妍妍要和妈妈一起出来接爸爸下班。可是妍妍还不会走路，只能妈妈背着妍妍到小区下面来接爸爸了。
+上周五是元宵节，爸爸请假提前回家过节，爸爸上班辛苦了，所以妍妍要和妈妈一起出来接爸爸下班。可是妍妍还不会走路，只能妈妈背着妍妍到小区外面来接爸爸了。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/jiebaba1.jpg?imageMogr2/auto-orient" />
