--- a/_posts/yan/2018-03-04-yanyan32.md
+++ b/_posts/yan/2018-03-04-yanyan32.md
@@ -11,7 +11,7 @@ video: true
 ---
 徐晓妍说，别的小朋友都是两瓣屁股，妍妍要八瓣屁股。为什么一定得是八瓣，因为腹肌是八块，所以屁股也要是八瓣😂
 {: .notice}
-洗完屁股，爸爸就帮着妍妍锻炼屁股了，还别说，拍着妍妍的屁股蛋还挺舒服，很有弹性，啪啪的响，哈哈哈❤️
+洗完屁股，爸爸就帮着妍妍锻炼屁股了，顺带演奏了一曲让妍妍欣赏下。还别说，拍着妍妍的屁股蛋还挺舒服，很有弹性，啪啪的响，哈哈哈❤️
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/dapigu.mp4" type='video/mp4'>
