--- a/_posts/yan/2018-03-14-yanyan33.md
+++ b/_posts/yan/2018-03-14-yanyan33.md
@@ -16,4 +16,10 @@ comments: true
 {: .notice}
 还有就是疫苗真难打，到哪都缺货，妍妍3个月的疫苗都还没打呢。
 {: .notice}
+<figure>
+    <img src="{{ site.staticUrl }}/yanyan/image/yishuzhao1.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yishuzhao2.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yishuzhao3.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yishuzhao4.jpg?imageMogr2/auto-orient" />
+</figure>
 
