--- a/_posts/yan/2018-03-14-yanyan33.md
+++ b/_posts/yan/2018-03-14-yanyan33.md
@@ -10,7 +10,7 @@ comments: true
 ---
 昨天是最后一次因为鼻泪管不通带徐晓妍去省儿童做治疗，来来回回折腾了徐晓妍四五次，每次做治疗都受惊，前天做了鼻泪管探通术，终于通了。
 {: .notice}
-每次做治疗，看到那么长的一根针管从内眼角插进去，妍妍还这么小，扶着她的头感到她很使劲的针扎就很担心一不小心出个什么问题。
+每次做治疗，看到那么长的一根针管从内眼角插进去，妍妍还这么小，扶着她的头感到她很使劲的针扎就很担心一不小心出个什么问题也担心太用力会把她的小脑袋压瘪。
 {: .notice}
 也不是没有好的，发现我们妍妍比其他的小孩长得要好要健康，哈哈哈❤️
 {: .notice}
