--- a/_posts/yan/2018-03-24-yanyan34.md
+++ b/_posts/yan/2018-03-24-yanyan34.md
@@ -10,6 +10,6 @@ comments: true
 ---
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/yishuzhao4.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/wakeup.jpg?imageMogr2/auto-orient" />
 </figure>
 
