--- a/_posts/yan/2018-03-24-yanyan34.md
+++ b/_posts/yan/2018-03-24-yanyan34.md
@@ -8,6 +8,9 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
+很久没有记录妍妍的日记了，我们的妍妍可是越来越可爱了，就是晚上还是不肯好好睡觉。
+{: .notice}
+上传一张前几天妍妍早上起来晓妍妈拍的照片，很可爱❤️
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/wakeup.jpg?imageMogr2/auto-orient" />
