--- a/_posts/yan/2018-04-05-yanyan35.md
+++ b/_posts/yan/2018-04-05-yanyan35.md
@@ -14,7 +14,7 @@ comments: true
 {: .notice}
 妍妍长得越来越快了，早上妍妍妈还得把裤脚剪开点才能给妍妍穿得下。
 {: .notice}
-还有就是我们妍妍长得越来越可爱的，分享几张妍妍妈和妍妍做游戏的照片，很可爱。
+还有就是我们妍妍长得越来越可爱了，分享几张妍妍妈和妍妍做游戏的照片，很可爱，妍妍玩的很开心。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/congmingyan1.JPG?imageMogr2/auto-orient" />
