--- a/_posts/yan/2018-04-09-yanyan36.md
+++ b/_posts/yan/2018-04-09-yanyan36.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-不是严格意义上的百天照，是妍妍快满4个月的时候去照的，照相馆只给了20张底片，都好可爱。
+不是严格意义上的百天照，是妍妍快满4个月的时候去照的，照相馆给了20张底片，都好可爱，放上来大家看看，也给妍妍长大以后看看自己小时候的样子。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/1X0A1.JPG?imageMogr2/auto-orient" />
