--- a/_posts/yan/2018-04-11-yanyan37.md
+++ b/_posts/yan/2018-04-11-yanyan37.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-今天下午徐晓妍剃了个光头，晚上睡觉前和爸爸妈妈拍个照留恋，这可是徐晓妍一生唯一一次当光头妍，人家可是小女生❤️
+今天下午徐晓妍剃了个光头，晚上睡觉前和爸爸妈妈拍个照留恋，这可是徐晓妍一生唯一一次当光头妍，人家可是女孩子❤️
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/guangtou1.JPG?imageMogr2/auto-orient" />
