--- a/_posts/yan/2018-02-20-yanyan29.md
+++ b/_posts/yan/2018-02-20-yanyan29.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-徐晓妍今天又去医院复查了，很顺利，但是鼻泪管还是没通，三天之后还要去通一次，看三天后的情况，如果不好就得预约手术了。医生和妍妈都说是一个小手术，但我还是不希望妍妍这么小做手术的，徐晓妍你要用力醒鼻子把泪管吸通啊。
+徐晓妍今天又去医院复查了，很顺利，但是鼻泪管还是没通，三天之后还要去通一次，看三天后的情况，如果不好就得预约手术了。医生和妍妈都说是一个小手术，但我还是不希望妍妍这么小做手术的，这么小就要做手术很可怜的。
 {: .notice}
 徐晓妍今天还收获了一个新外号，大脸妍，妍妈起的，因为抱着徐晓妍的时候，被子外面全是脸😳
 {: .notice}
