--- a/_posts/yan/2018-04-18-yanyan38.md
+++ b/_posts/yan/2018-04-18-yanyan38.md
@@ -11,8 +11,8 @@ comments: true
 今天外婆过生日，爷爷奶奶和妈妈三个人带着徐晓妍去外婆家玩，阳光很好，徐晓妍戴这个帽子拍照，照片是拍的不错，就是戴着帽子妈妈说像刘海砍樵😳
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/waipozhushou1.JPG?imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/waipozhushou2.JPG?imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/waipozhushou3.JPG?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/waipozhushou1.jpeg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/waipozhushou2.jpeg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/waipozhushou3.jpeg?imageMogr2/auto-orient" />
 </figure>
 
