--- a/_posts/yan/2018-04-22-yanyan39.md
+++ b/_posts/yan/2018-04-22-yanyan39.md
@@ -2,7 +2,7 @@
 layout: post
 title: "爸爸寄语"
 date: 2018-04-22
-excerpt: "妍妍的日记-39"
+excerpt: "爸爸寄语-2018年4月22日"
 tags: [徐晓妍]
 feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
