--- a/_posts/yan/2018-04-27-yanyan40.md
+++ b/_posts/yan/2018-04-27-yanyan40.md
@@ -8,6 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
+早上爸爸已经准备上班了，可妈妈7点才刚睡下，因为好不容易才把妍妍哄睡，不容易啊😓
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/zaochen.JPG?imageMogr2/auto-orient" />
