--- a/_posts/yan/2018-05-03-yanyan41.md
+++ b/_posts/yan/2018-05-03-yanyan41.md
@@ -8,6 +8,9 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-
+妍妍妈昨天开始上班了，昨晚回来说有点累，也是，这么久没上班，一上班就要站一天，哪有不累的。现在爸爸妈妈都要上班了，妍妍你现在就要辛苦爷爷奶奶带着呢，不要太想爸爸妈妈，爸爸妈妈下班就回家了。
 {: .notice}
+前天妍妍你还把妈妈弄伤了，对着妈妈的下巴就用力的嘬，都嘬出血印子了，不好看，就不拍照了，等妍妍长大了，肯定得罚她。
+{: .notice}
+
 
