--- a/_posts/post/2018-05-03-rabbit-mq.md
+++ b/_posts/post/2018-05-03-rabbit-mq.md
@@ -8,3 +8,13 @@ tag:
 - rabbitMq
 comments: true
 ---
+
+## RabbitMq Exchange
+
+RabbitMq Exchange负责Message和具体的Queue之间的路由关系，当rabbitMq接收到一个消息，首先是由Exchange处理，如果找不到对应的Exchange，则回调```ConfirmCallback```，```ack```返回false。稍微扩展一点，如果最终一个消息不能被路由到任何一个queue，则会回调```ReturnCallback```。
+
+## 四种Exchange类型
+
+### direct exchange
+
+
