--- a/_posts/post/2018-05-03-rabbit-mq.md
+++ b/_posts/post/2018-05-03-rabbit-mq.md
@@ -17,4 +17,4 @@ RabbitMq Exchange负责Message和具体的Queue之间的路由关系，当rabbit
 
 ### direct exchange
 
-
+这种exchange会根据routingKey直接匹配对应的queue name，将Message和queue做一一对应，默认的exchange就是该类型。
