--- a/_posts/post/2018-05-03-rabbit-mq.md
+++ b/_posts/post/2018-05-03-rabbit-mq.md
@@ -18,3 +18,7 @@ RabbitMq Exchange负责Message和具体的Queue之间的路由关系，当rabbit
 ### direct exchange
 
 这种exchange会根据routingKey直接匹配对应的queue name，将Message和queue做一一对应，默认的exchange就是该类型。
+
+### fanout exchange
+
+这种exchange会直接将message广播到所有的queue中去，不管你指定的routingKey是什么。
