--- a/_posts/post/2018-05-03-rabbit-mq.md
+++ b/_posts/post/2018-05-03-rabbit-mq.md
@@ -32,4 +32,4 @@ RabbitMq Exchange负责Message和具体的Queue之间的路由关系，当rabbit
     
 ### topic exchange
 
-这种exchange需要特定的routingKey，必须是小数点隔开的一系列标识符，而binding则可以使用通配符，比如*和#。可以建立*.rabbit.*和queue的binding，当routingKey符合该binding的验证规则时，则可以将message发送到对应的queue中。
+这种exchange需要特定的routingKey，必须是小数点隔开的一系列标识符，而binding则可以使用通配符，比如```*和#```。可以建立```*.rabbit.*```和queue的binding，当routingKey符合该binding的验证规则时，则可以将message发送到对应的queue中。
