--- a/_posts/yan/2018-05-09-yanyan43.md
+++ b/_posts/yan/2018-05-09-yanyan43.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-给妍妍起了个新名字，jia妍。因为妍妍只要别人跟她jia，她就会开心的笑的不得了，反正现在我老喊她jia妍了。上传几张昨天妍妍和妈妈玩的照片。
+给妍妍起了个新名字，jia妍。因为妍妍只要别人跟她jia，她就会笑的开心的不得了，反正现在我老喊她jia妍了。上传几张昨天妍妍和妈妈玩的照片。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/jiayan1.JPG?imageMogr2/auto-orient" />
