--- a/_posts/yan/2018-05-09-yanyan43.md
+++ b/_posts/yan/2018-05-09-yanyan43.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "jia妍"
+title: "jià妍"
 date: 2018-05-09
 excerpt: "妍妍的日记-43"
 tags: [徐晓妍]
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-给妍妍起了个新名字，jia妍。因为妍妍只要别人跟她jia，她就会笑的开心的不得了，反正现在我老喊她jia妍了。上传几张昨天妍妍和妈妈玩的照片。
+给妍妍起了个新名字，jià妍。因为妍妍只要别人跟她jià，她就会笑的开心的不得了，反正现在我老喊她jià妍了。上传几张昨天妍妍和妈妈玩的照片。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/jiayan1.JPG?imageMogr2/auto-orient" />
