--- a/_posts/yan/2018-05-11-yanyan44.md
+++ b/_posts/yan/2018-05-11-yanyan44.md
@@ -8,6 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
+今天妈妈带着妍妍和其他小伙伴一起做游戏了，jia妍笑的不得了。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/youxi1.jpeg?imageMogr2/auto-orient" />
