--- a/_posts/yan/2018-05-11-yanyan44.md
+++ b/_posts/yan/2018-05-11-yanyan44.md
@@ -8,7 +8,12 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-今天妈妈带着妍妍和其他小伙伴一起做游戏了，jia妍笑的不得了。
+第一次和小朋友这么近距离接触，妍妍高兴坏了，一直想去抓她的小伙伴，坐在妍妍对面的小伙伴叫皮皮，家里住玫瑰园。皮皮很喜欢小妍的新玩具，抓住就往嘴里啃。
+{: .notice}
+妍妍还坐了慕宸弟弟的餐车，可以在地上拖行的，妍妍可喜欢了，笑的合不拢嘴。
+{: .notice}
+今天真是愉快的一天呀，徐晓妍认识了好多小伙伴，还碰到了同年同月同日生的坤坤，以后我们就是好朋友了。
+大家要好好相处哦。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/youxi1.jpeg?imageMogr2/auto-orient" />
