--- a/_posts/life/2018-06-04-meet.md
+++ b/_posts/life/2018-06-04-meet.md
@@ -2,7 +2,7 @@
 layout: post
 title: "在南京，见了阿香"
 date: 2018-06-04
-excerpt: "去南京，和阿香短暂见了一面，感慨万千"
+excerpt: "去南京出差，和阿香短暂见了一面，感慨万千"
 tags: [阿香]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
