--- a/_posts/post/2018-06-08-netty.md
+++ b/_posts/post/2018-06-08-netty.md
@@ -45,3 +45,6 @@ public class Client {
 * AbstractBootstrap：用来初始化一个channel并向EventLoopGroup中注册这个channel。
 * NioEventLoopGroup：初始化EventLoop集合，默认大小为系统核数 * 2，并初始化choice实现，用来将注册过来的channel选择一个EventLoop并实际注册到之中。
 * NioEventLoop：继承了Executor接口，可以管理多个netty channel，并open了一个selector，通过selector来管理多个jdk NIO channel。
+
+## 简述管道注册流程
+
