--- a/_posts/post/2018-06-08-netty.md
+++ b/_posts/post/2018-06-08-netty.md
@@ -9,7 +9,7 @@ tag:
 comments: true
 ---
 
-> 以TCP协议，NIO为基础学习研究。
+> 以TCP协议，NIO为基础学习研究。下文中如无特殊说明，channel都指的是netty channel。
 
 以下是netty client启动代码
 ``` java
@@ -44,7 +44,17 @@ public class Client {
 
 * AbstractBootstrap：用来初始化一个channel并向EventLoopGroup中注册这个channel。
 * NioEventLoopGroup：初始化EventLoop集合，默认大小为系统核数 * 2，并初始化choice实现，用来将注册过来的channel选择一个EventLoop并实际注册到之中。
-* NioEventLoop：继承了Executor接口，可以管理多个netty channel，并open了一个selector，通过selector来管理多个jdk NIO channel。
+* NioEventLoop：继承了Executor接口，可以管理多个netty channel，并open了一个selector，通过selector来管理多个java NIO channel。
 
 ## 简述管道注册流程
 
+1. AbstractBootstrap负责初始化一个channel并注册，初始化是会open一个java nio channel，但此时并不会connect。
+2. AbstractBootstrap获取配置的EventLoopGroup并向其注册初始化的channel。
+3. EventLoopGroup初始化时做了两件事：
+    1. 初始化多个EventLoop。
+    2. 初始化choice，用来选择返回一个EventLoop实例。
+4. EventLoopGroup调用```next()```方法，通过choice获取到EventLoop实例并调用其注册方法。
+5. 将EventLoop和ChannelPromise都注册到channel中。
+6. EventLoop启动一个线程来维护channel的事件，如线程已启动，则不重复启动。
+7. 将channel维护的java nio channel注册进EventLoop维护的selector，并将该channel作为attachment同时注册到SelectionKey中。
+    
