--- a/_posts/post/2018-06-08-netty.md
+++ b/_posts/post/2018-06-08-netty.md
@@ -56,5 +56,6 @@ public class Client {
 4. EventLoopGroup调用```next()```方法，通过choice获取到EventLoop实例并调用其注册方法。
 5. 将EventLoop和ChannelPromise都注册到channel中。
 6. EventLoop启动一个线程来维护channel的事件，如线程已启动，则不重复启动。
-7. 将channel维护的java nio channel注册进EventLoop维护的selector，并将该channel作为attachment同时注册到SelectionKey中。
+7. 将channel维护的java nio channel注册进EventLoop维护的selector，并将该channel作为attachment同时注册到SelectionKey中并触发registered事件。
+8. channel注册之后会触发绑定的listener，会调用直行connect方法，如果链接成功，则触发active事件。
     
