--- a/_posts/post/2018-06-08-netty.md
+++ b/_posts/post/2018-06-08-netty.md
@@ -43,19 +43,19 @@ public class Client {
 ## 线程模型
 
 * AbstractBootstrap：用来初始化一个channel并向EventLoopGroup中注册这个channel。
-* NioEventLoopGroup：初始化EventLoop集合，默认大小为系统核数 * 2，并初始化choice实现，用来将注册过来的channel选择一个EventLoop并实际注册到之中。
+* NioEventLoopGroup：初始化EventLoop集合，默认大小为系统核数 * 2，并初始化chooser实现，用来将注册过来的channel选择一个EventLoop并实际注册到之中。
 * NioEventLoop：继承了Executor接口，可以管理多个netty channel，并open了一个selector，通过selector来管理多个java NIO channel。
 
 ## 简述管道注册流程
 
-1. AbstractBootstrap负责初始化一个channel并注册，初始化是会open一个java nio channel，但此时并不会connect。
-2. AbstractBootstrap获取配置的EventLoopGroup并向其注册初始化的channel。
-3. EventLoopGroup初始化时做了两件事：
+1. AbstractBootstrap负责初始化一个channel并注册，初始化是会open一个java nio channel，但此时并不会connect。```io.netty.bootstrap.Bootstrap#doResolveAndConnect```
+2. AbstractBootstrap获取配置的EventLoopGroup并向其注册初始化的channel。```io.netty.channel.MultithreadEventLoopGroup#register(io.netty.channel.Channel)```
+3. EventLoopGroup初始化时做了两件事：```io.netty.util.concurrent.MultithreadEventExecutorGroup#MultithreadEventExecutorGroup(int, java.util.concurrent.Executor, io.netty.util.concurrent.EventExecutorChooserFactory, java.lang.Object...)```
     1. 初始化多个EventLoop。
-    2. 初始化choice，用来选择返回一个EventLoop实例。
-4. EventLoopGroup调用```next()```方法，通过choice获取到EventLoop实例并调用其注册方法。
-5. 将EventLoop和ChannelPromise都注册到channel中。
+    2. 初始化chooser，用来选择返回一个EventLoop实例。
+4. EventLoopGroup调用```next()```方法，通过chooser获取到EventLoop实例并调用其注册方法。```io.netty.util.concurrent.EventExecutorChooserFactory.EventExecutorChooser#next```
+5. 将EventLoop和ChannelPromise都注册到channel中。```io.netty.channel.AbstractChannel.AbstractUnsafe#register```
 6. EventLoop启动一个线程来维护channel的事件，如线程已启动，则不重复启动。
-7. 将channel维护的java nio channel注册进EventLoop维护的selector，并将该channel作为attachment同时注册到SelectionKey中并触发registered事件。
-8. channel注册之后会触发绑定的listener，会调用直行connect方法，如果链接成功，则触发active事件。
-    
+7. 将channel维护的java nio channel注册进EventLoop维护的selector，并将该channel作为attachment同时注册到SelectionKey中并触发registered事件。```io.netty.channel.nio.AbstractNioChannel#doRegister```
+8. channel注册之后会触发绑定的listener，会调用直行connect方法，如果链接成功，则触发active事件。```io.netty.bootstrap.Bootstrap#doResolveAndConnect0```
+9. 对于通道的读取则会走到NioEventLoop的processSelectedKey方法，会同时管理channel的数据读取和通道的关闭。 ```io.netty.channel.nio.NioEventLoop#processSelectedKey(java.nio.channels.SelectionKey, io.netty.channel.nio.AbstractNioChannel)```
