--- a/_posts/post/2018-06-08-netty.md
+++ b/_posts/post/2018-06-08-netty.md
@@ -48,12 +48,24 @@ public class Client {
 
 ## 简述管道注册流程
 
-1. AbstractBootstrap负责初始化一个channel并注册，初始化是会open一个java nio channel，但此时并不会connect。```io.netty.bootstrap.Bootstrap#doResolveAndConnect```
-2. AbstractBootstrap获取配置的EventLoopGroup并向其注册初始化的channel。```io.netty.channel.MultithreadEventLoopGroup#register(io.netty.channel.Channel)```
-3. EventLoopGroup初始化时做了两件事：```io.netty.util.concurrent.MultithreadEventExecutorGroup#MultithreadEventExecutorGroup(int, java.util.concurrent.Executor, io.netty.util.concurrent.EventExecutorChooserFactory, java.lang.Object...)```
+``` java
+io.netty.bootstrap.Bootstrap#doResolveAndConnect
+```
+1. AbstractBootstrap负责初始化一个channel并注册，初始化是会open一个java nio channel，但此时并不会connect。
+``` java
+io.netty.channel.MultithreadEventLoopGroup#register(io.netty.channel.Channel)
+```
+2. AbstractBootstrap获取配置的EventLoopGroup并向其注册初始化的channel。
+``` java
+io.netty.util.concurrent.MultithreadEventExecutorGroup#MultithreadEventExecutorGroup(int, java.util.concurrent.Executor, io.netty.util.concurrent.EventExecutorChooserFactory, java.lang.Object...)
+```
+3. EventLoopGroup初始化时做了两件事：
     1. 初始化多个EventLoop。
     2. 初始化chooser，用来选择返回一个EventLoop实例。
-4. EventLoopGroup调用```next()```方法，通过chooser获取到EventLoop实例并调用其注册方法。```io.netty.util.concurrent.EventExecutorChooserFactory.EventExecutorChooser#next```
+``` java
+io.netty.util.concurrent.EventExecutorChooserFactory.EventExecutorChooser#next
+```
+4. EventLoopGroup调用```next()```方法，通过chooser获取到EventLoop实例并调用其注册方法。
 5. 将EventLoop和ChannelPromise都注册到channel中。```io.netty.channel.AbstractChannel.AbstractUnsafe#register```
 6. EventLoop启动一个线程来维护channel的事件，如线程已启动，则不重复启动。
 7. 将channel维护的java nio channel注册进EventLoop维护的selector，并将该channel作为attachment同时注册到SelectionKey中并触发registered事件。```io.netty.channel.nio.AbstractNioChannel#doRegister```
